tests/valid/block_expr.fl
main :: proc () {
  a := 123;

  {
    b := a;
  }
}
