tests/invalid/missing_main.fl
test :: proc () {
	a := 123;
}
